yelp mvp updated

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :address %>
-    <%= f.input :phonenumber %>
+    <%= f.input :phone_number %>
     <%= f.input :category %>
   </div>
 
