--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', restaurant: @restaurant %>
 
 <%= link_to 'Show', @restaurant %> |
-<%= link_to 'Back', restaurants_path %>
+<%= link_to 'Back to restaurant overview', restaurants_path %>
