--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,13 +1,13 @@
-<p id="notice"><%= notice %></p>
+<div class="container"><p id="notice"><%= notice %></p>
 
 <h1>Restaurants</h1>
 
-<table>
+<table class="table-padded">
   <thead>
     <tr>
       <th>Name</th>
       <th>Address</th>
-      <th>Phonenumber</th>
+      <th>Phone number</th>
       <th>Category</th>
       <th colspan="3"></th>
     </tr>
@@ -18,11 +18,9 @@
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.address %></td>
-        <td><%= restaurant.phonenumber %></td>
-        <td><%= restaurant.category %></td>
+        <td><%= restaurant.phone_number %></td>
+        <td><%= restaurant.category.capitalize %></td>
         <td><%= link_to 'Show', restaurant %></td>
-        <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Restaurant', new_restaurant_path %>
+
+</div>
